Adding parallelism and actions ordering for better alpha-beta prunning

--- a/Test_ChessAI.ipynb
+++ b/Test_ChessAI.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f6ed00a0",
+   "id": "04e98c2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "980b9b2c",
+   "execution_count": 3,
+   "id": "464091f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9999999999999929, (<PlyCategory.MOVE: 'MOVE'>, ((2, 2), (3, 2))))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "board = dict()\n",
     "\n",
@@ -82,17 +93,9 @@
     "        )\n",
     "\n",
     "game = Game()\n",
-    "heuristic_AlphaBetaSearch = HeuristicAlphaBetaSearch(max_depth=5)\n",
+    "heuristic_AlphaBetaSearch = HeuristicAlphaBetaSearch(max_depth=6)\n",
     "heuristic_AlphaBetaSearch.alpha_beta_search(game, state)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f067f086",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
